--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test:unit": "jest",
+    "test:integration": "cypress open --config video=false",
+    "test:component": "cypress open-ct",
+    "generatestyle": "postcss --config ./test/e2e/css/postcss.config.js ./assets/css/tailwind.css -o ./test/e2e/css/app.css"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
@@ -17,6 +20,8 @@
     "nuxt": "^2.15.4"
   },
   "devDependencies": {
+    "@cypress/vue": "^2.2.0",
+    "@cypress/webpack-dev-server": "^1.1.3",
     "@nuxtjs/composition-api": "^0.23.0",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
@@ -25,11 +30,20 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "css-loader": "^5.2.1",
+    "cssnano": "^5.0.0",
+    "cypress": "^7.1.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
-    "postcss": "^8.2.8",
-    "vue-jest": "^3.0.4"
+    "postcss": "^8.2.10",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^2.0.0",
+    "vue-jest": "^3.0.4",
+    "webpack-dev-server": "^3.11.2"
   }
 }
